--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,12 +3,18 @@
 }
 
 .header nav a {
-    margin-right: 20px;
+    margin: 5px 10px;
     text-decoration: none;
-    color: black;
-    font-size: 20px;
+    color: white;
+    font-size: 16px;
+    background-color: #BD1E51;
+    padding: 10px 20px;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
 }
 
 nav a:hover {
-    color: orange;
+    background-color: #F4DB7D;
+    color: black;
 }
